# v8_inspector_example

./: .gitignore  CMakeLists.txt  Inspector.h  LICENSE  README.md  utils.h  v8inspector_channel.cpp  v8inspector_client.h  websocket_server.cpp  websocket_server.h
.github/workflows/: main.yml
example/: add.c  code.js  code.js.map  code.ts  wasm-example.js
src/: Inspector.cpp  Inspector.h  main.cpp  utils.h  v8_inspector_listener_impl.h  v8_inspector_listener_wasm_impl.h  v8inspector_channel.h  v8inspector_client.cpp  v8inspector_client.h  v8inspector_listener.h  websocket_server.cpp  websocket_server.h
